# AllToPrint-V0.04

./: CMakeLists.txt  partitions.csv
components/ota_update/: CMakeLists.txt  ota_update.c  ota_update.h
main/: CMakeLists.txt  app_interface.h  app_preguntas.c  app_selector.c  app_votacion.c  main.c  msg_manager.c  msg_manager.h  nvs_storage.c  nvs_storage.h  ota_config_server.c  ota_config_server.h  printer_driver.c  printer_driver.h  web_server.c  wifi_manager.c  wifi_manager.h
